// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary with plural expenses 1`] = `
<div>
  <p>
    Viewing 
    3
     
    expenses
     totalling 
    $120.95
  </p>
</div>
`;

exports[`should render ExpenseSummary with singular expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $1.95
  </p>
</div>
`;
